# sdd_backend

./: .env  .gitignore  Dockerfile  all_chrome_bookmarks.json  api_req.json  daren_grids copy.py  daren_grids.py  item.json  longab_1.20.js  main.py  pyproject.toml  shortab_1.19.js  weixinapi.py
app/: app01.py  app02.py  app03.py  app04.py  app05.py  app06.py  app07.py  app08.py  app09.py  app10.py  app11.py
migrations/models/: 0_20260305171653_init.py
orm/: models.py
src/encrypt/: verfyfp.py
static/audience_assets/: 5A关系资产_A1了解（Aware）_20260205_本品牌_用户趋势_20260207.csv  5A关系资产_A1了解（Aware）_20260211_本品牌_用户趋势_20260213.csv  5A关系资产_A1了解（Aware）_20260226_本品牌_用户趋势_20260228.csv  5A关系资产_A2吸引（Appeal）_20260205_本品牌_用户趋势_20260207.csv  5A关系资产_A2吸引（Appeal）_20260211_本品牌_用户趋势_20260213.csv  5A关系资产_A2吸引（Appeal）_20260226_本品牌_用户趋势_20260228.csv  5A关系资产_A3问询（Ask）_20260205_本品牌_用户趋势_20260207.csv  5A关系资产_A3问询（Ask）_20260211_本品牌_用户趋势_20260213.csv  5A关系资产_A3问询（Ask）_20260226_本品牌_用户趋势_20260228.csv  5A关系资产_A4行动（Act）_20260205_本品牌_用户趋势_20260207.csv  5A关系资产_A4行动（Act）_20260211_本品牌_用户趋势_20260213.csv  5A关系资产_A4行动（Act）_20260226_本品牌_用户趋势_20260228.csv  5A关系资产_A5拥护（Advocate）_20260205_本品牌_用户趋势_20260207.csv  5A关系资产_A5拥护（Advocate）_20260211_本品牌_用户趋势_20260213.csv  5A关系资产_A5拥护（Advocate）_20260226_本品牌_用户趋势_20260228.csv  (+3 more)
type/: reposen_model.py
utils/: AudienceAsset_compute.py  auth_jwt.py  code_verfy.py  envtool.py  fileupload.py  gettoken.py  jxlm.py  log.py  qianchuan_api_service.py  shop_data_upload.py  tools.py  uni_data_models_new backup.py  uni_data_models_new.py  webid.py
(+24 files in other folders)
